ecmascript/parser/tests/typescript-errors/tsc/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings07_ES6/input.ts.stderr
error: Invalid unciode code point
 --> $DIR/tests/typescript-errors/tsc/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings07_ES6/input.ts:5:13
  |
5 | var x = "\u{110000}";
  |             ^^^^^^

